--- a/MauiAppMudancaDeTela/Login.xaml
+++ b/MauiAppMudancaDeTela/Login.xaml
@@ -3,10 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppMudancaDeTela.Login"
              Title="Login">
-    <VerticalStackLayout>
+    <VerticalStackLayout VerticalOptions="Center" Spacing="12" Padding="10">
         <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            Text="Sistema de Login"
+            HorizontalOptions="Center"
+            FontSize="30"
+            FontAttributes="Bold"
+            />
+
+        <Label Text="Usuário"/>
+        <Entry x:Name="txt_usuario" />
+
+        <Label Text="Senha" />
+        <Entry x:Name="txt_senha" IsPassword="true" />
+
+
+        <Button Text="Entrar" HorizontalOptions="Center" Clicked="Button_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
