--- a/MauiAppMudancaDeTela/Protegida.xaml
+++ b/MauiAppMudancaDeTela/Protegida.xaml
@@ -3,10 +3,22 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppMudancaDeTela.Protegida"
              Title="Protegida">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout VerticalOptions="Center" 
+                         Margin="10" 
+                         Padding="10" 
+                         Spacing="20">
+        <Frame>
+            <VerticalStackLayout>
+                <Label 
+                    Text="Área protegida"
+                    FontSize="Large"
+                    HorizontalTextAlignment="Center"/>
+
+                <Label x:Name="lbl_boasvindas" HorizontalTextAlignment="Center" />
+                <Button Text="desconectar" 
+                        HorizontalOptions="Center"
+                        Clicked="Button_Clicked"/>
+            </VerticalStackLayout>
+        </Frame>
     </VerticalStackLayout>
 </ContentPage>
